--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@iconify/react": "^5.1.0",
     "axios": "^1.7.9",
-    "next": "15.1.3",
+    "next": "^15.4.6",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
